--- a/index.html
+++ b/index.html
@@ -13,5 +13,75 @@
     <link rel="stylesheet" href="css/style.css" />
     <title>Projeto Nubank</title>
   </head>
-  <body></body>
+  <body>
+    <header id="header">
+      <!-- Navbar Mobile -->
+      <nav class="navbar-mobile">
+        <div class="bx" id="bx"></div>
+        <div class="logo"></div>
+        <a href="">Login</a>
+      </nav>
+      <!-- Navbar Desktop -->
+      <nav class="navbar-desktop">
+        <div class="navbar-desktop-item-1">
+          <div class="logo">
+            <ul class="menu-desktop">
+              <!--  -->
+              <li class="menu-item">
+                <a href="" class="nav-link-desktop">Nubank</a>
+                <ul class="dropdown-menu">
+                  <li class="dropdown-item">
+                    <a href="" class="nav-link-dropdown">O Nu</a>
+                    <a href="" class="nav-link-dropdown">Carreiras</a>
+                    <a href="" class="nav-link-dropdown">Imprensa</a>
+                  </li>
+                </ul>
+              </li>
+              <!--  -->
+              <li class="menu-item">
+                <a href="" class="nav-link-desktop">Conta Digital</a>
+                <ul class="dropdown-menu">
+                  <li class="dropdown-item">
+                    <a href="" class="nav-link-dropdown">Crie sua conta</a>
+                    <a href="" class="nav-link-dropdown">Traansferências</a>
+                    <a href="" class="nav-link-dropdown">Rendimento</a>
+                  </li>
+                </ul>
+              </li>
+              <!--  -->
+              <li class="menu-item">
+                <a href="" class="nav-link-desktop">Para você</a>
+                <ul class="dropdown-menu">
+                  <li class="dropdown-item">
+                    <a href="" class="nav-link-dropdown">Comunidade</a>
+                    <a href="" class="nav-link-dropdown">Rewards</a>
+                    <a href="" class="nav-link-dropdown">Novidades</a>
+                  </li>
+                </ul>
+              </li>
+              <!--  -->
+            </ul>
+          </div>
+        </div>
+        <div class="navbar-desktop-item-2">
+          <a href="" class="btn">Quero ser Nubank</a>
+          <a href="">Login</a>
+        </div>
+      </nav>
+      <!-- Navbar Menu Mobile -->
+      <nav class="menu-mobile">
+        <ul class="nav-list-mobile">
+          <li>
+            <a href="" class="nav-link-mobile">Nubank</a>
+            <a href="" class="nav-link-mobile">Conta Digital</a>
+            <a href="" class="nav-link-mobile">Para você</a>
+            <a href="" class="nav-link-mobile">Quero ser Nubank</a>
+            <a href="" class="nav-link-mobile">Redes Sociais</a>
+          </li>
+        </ul>
+      </nav>
+    </header>
+    <!-- JS -->
+    <script src="js/app.js"></script>
+  </body>
 </html>
