--- a/index.html
+++ b/index.html
@@ -24,15 +24,19 @@
       <!-- Navbar Desktop -->
       <nav class="navbar-desktop">
         <div class="navbar-desktop-item-1">
-          <div class="logo">
+          <div class="logo"></div>
             <ul class="menu-desktop">
               <!--  -->
               <li class="menu-item">
                 <a href="" class="nav-link-desktop">Nubank</a>
-                <ul class="dropdown-menu">
+                <ul class="dropdown-menu" style="display: none">
                   <li class="dropdown-item">
                     <a href="" class="nav-link-dropdown">O Nu</a>
+                  </li>
+                  <li class="dropdown-item">
                     <a href="" class="nav-link-dropdown">Carreiras</a>
+                  </li>
+                  <li class="dropdown-item">
                     <a href="" class="nav-link-dropdown">Imprensa</a>
                   </li>
                 </ul>
@@ -40,10 +44,14 @@
               <!--  -->
               <li class="menu-item">
                 <a href="" class="nav-link-desktop">Conta Digital</a>
-                <ul class="dropdown-menu">
+                <ul class="dropdown-menu" style="display: none">
                   <li class="dropdown-item">
                     <a href="" class="nav-link-dropdown">Crie sua conta</a>
-                    <a href="" class="nav-link-dropdown">Traansferências</a>
+                  </li>
+                  <li class="dropdown-item">
+                    <a href="" class="nav-link-dropdown">Transferências</a>
+                  </li>
+                  <li class="dropdown-item">
                     <a href="" class="nav-link-dropdown">Rendimento</a>
                   </li>
                 </ul>
@@ -51,17 +59,20 @@
               <!--  -->
               <li class="menu-item">
                 <a href="" class="nav-link-desktop">Para você</a>
-                <ul class="dropdown-menu">
+                <ul class="dropdown-menu" style="display: none">
                   <li class="dropdown-item">
                     <a href="" class="nav-link-dropdown">Comunidade</a>
+                  </li>
+                  <li class="dropdown-item">
                     <a href="" class="nav-link-dropdown">Rewards</a>
+                  </li>
+                  <li class="dropdown-item">
                     <a href="" class="nav-link-dropdown">Novidades</a>
                   </li>
                 </ul>
               </li>
               <!--  -->
             </ul>
-          </div>
         </div>
         <div class="navbar-desktop-item-2">
           <a href="" class="btn">Quero ser Nubank</a>
@@ -71,13 +82,11 @@
       <!-- Navbar Menu Mobile -->
       <nav class="menu-mobile">
         <ul class="nav-list-mobile">
-          <li>
-            <a href="" class="nav-link-mobile">Nubank</a>
-            <a href="" class="nav-link-mobile">Conta Digital</a>
-            <a href="" class="nav-link-mobile">Para você</a>
-            <a href="" class="nav-link-mobile">Quero ser Nubank</a>
-            <a href="" class="nav-link-mobile">Redes Sociais</a>
-          </li>
+          <li><a href="" class="nav-link-mobile">Nubank</a></li>
+          <li><a href="" class="nav-link-mobile">Conta Digital</a></li>
+          <li><a href="" class="nav-link-mobile">Para você</a></li>
+          <li><a href="" class="nav-link-mobile">Quero ser Nubank</a></li>
+          <li><a href="" class="nav-link-mobile">Redes Sociais</a></li>
         </ul>
       </nav>
     </header>
