--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
           <div class="logo"></div>
             <ul class="menu-desktop">
               <!--  -->
-              <li class="menu-item">
+              <li class="menu-item" id="menu-item-1">
                 <a href="" class="nav-link-desktop">Nubank</a>
-                <ul class="dropdown-menu" style="display: none">
+                <ul class="dropdown-menu" id="dropdown-item-1" >
                   <li class="dropdown-item">
                     <a href="" class="nav-link-dropdown">O Nu</a>
                   </li>
@@ -42,9 +42,9 @@
                 </ul>
               </li>
               <!--  -->
-              <li class="menu-item">
+              <li class="menu-item"  id="menu-item-2">
                 <a href="" class="nav-link-desktop">Conta Digital</a>
-                <ul class="dropdown-menu" style="display: none">
+                <ul class="dropdown-menu" id="dropdown-item-2">
                   <li class="dropdown-item">
                     <a href="" class="nav-link-dropdown">Crie sua conta</a>
                   </li>
@@ -57,9 +57,9 @@
                 </ul>
               </li>
               <!--  -->
-              <li class="menu-item">
+              <li class="menu-item"  id="menu-item-3">
                 <a href="" class="nav-link-desktop">Para você</a>
-                <ul class="dropdown-menu" style="display: none">
+                <ul class="dropdown-menu" id="dropdown-item-3">
                   <li class="dropdown-item">
                     <a href="" class="nav-link-dropdown">Comunidade</a>
                   </li>
